// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandoRow matches snapshot when collapsed 1`] = `
<View
  collapsable={false}
  focusVisibleStyle={{}}
  forwardedRef={[Function]}
  jestAnimatedProps={
    {
      "value": {},
    }
  }
  jestAnimatedStyle={
    {
      "value": {},
    }
  }
  jestInlineStyle={
    [
      {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": 12,
        "borderBottomRightRadius": 12,
        "borderTopLeftRadius": 12,
        "borderTopRightRadius": 12,
        "flexDirection": "column",
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": 12,
        "borderBottomRightRadius": 12,
        "borderTopLeftRadius": 12,
        "borderTopRightRadius": 12,
        "flexDirection": "column",
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      {},
    ]
  }
  testID="expando-row"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingTop": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexGrow": 1,
          "gap": 12,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "borderBottomColor": "rgba(255,255,255,0.12)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(255,255,255,0.12)",
            "borderLeftWidth": 0,
            "borderRightColor": "rgba(255,255,255,0.12)",
            "borderRightWidth": 0,
            "borderStyle": "solid",
            "borderTopColor": "rgba(255,255,255,0.12)",
            "borderTopWidth": 0,
            "flex": 1,
            "flexShrink": 0,
            "height": 0,
            "maxHeight": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.4}
          style={
            {
              "color": "rgba(255, 255, 255, 0.38)",
              "fontFamily": "Basel Grotesk",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 19.5,
              "textAlign": "center",
            }
          }
          suppressHighlighting={true}
          testID="expando-row-label"
        >
          Test Label
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
          testID="expando-row-icon"
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            fill="none"
            focusable={false}
            meetOrSlice={0}
            minX={0}
            minY={0}
            strokeWidth={8}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "color": "rgba(255, 255, 255, 0.38)",
                  "height": 16,
                  "width": 16,
                },
                {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={16}
            vbWidth={17}
          >
            <RNSVGGroup
              color="rgba(255, 255, 255, 0.38)"
              fill={null}
              propList={
                [
                  "fill",
                  "strokeWidth",
                ]
              }
              strokeWidth={8}
            >
              <RNSVGPath
                d="M11.638 8.86209C11.8987 9.12275 11.8987 9.54413 11.638 9.80479L8.97138 12.4715C8.84138 12.6015 8.67069 12.6668 8.50002 12.6668C8.32936 12.6668 8.15867 12.6015 8.02867 12.4715L5.362 9.80479C5.10134 9.54413 5.10134 9.12275 5.362 8.86209C5.62267 8.60142 6.04405 8.60142 6.30471 8.86209L8.50002 11.0574L10.6953 8.86209C10.956 8.60142 11.3774 8.60142 11.638 8.86209ZM6.30471 7.13813L8.50002 4.94281L10.6953 7.13813C10.8253 7.26813 10.996 7.33344 11.1667 7.33344C11.3374 7.33344 11.508 7.26813 11.638 7.13813C11.8987 6.87746 11.8987 6.45609 11.638 6.19542L8.97138 3.52875C8.71071 3.26809 8.28934 3.26809 8.02867 3.52875L5.362 6.19542C5.10134 6.45609 5.10134 6.87746 5.362 7.13813C5.62267 7.39879 6.04405 7.39879 6.30471 7.13813Z"
                fill={
                  {
                    "type": 2,
                  }
                }
                propList={
                  [
                    "fill",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "rgba(255,255,255,0.12)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(255,255,255,0.12)",
            "borderLeftWidth": 0,
            "borderRightColor": "rgba(255,255,255,0.12)",
            "borderRightWidth": 0,
            "borderStyle": "solid",
            "borderTopColor": "rgba(255,255,255,0.12)",
            "borderTopWidth": 0,
            "flex": 1,
            "flexShrink": 0,
            "height": 0,
            "maxHeight": 0,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`ExpandoRow matches snapshot when expanded 1`] = `
<View
  collapsable={false}
  focusVisibleStyle={{}}
  forwardedRef={[Function]}
  jestAnimatedProps={
    {
      "value": {},
    }
  }
  jestAnimatedStyle={
    {
      "value": {},
    }
  }
  jestInlineStyle={
    [
      {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": 12,
        "borderBottomRightRadius": 12,
        "borderTopLeftRadius": 12,
        "borderTopRightRadius": 12,
        "flexDirection": "column",
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  role="button"
  style={
    [
      {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": 12,
        "borderBottomRightRadius": 12,
        "borderTopLeftRadius": 12,
        "borderTopRightRadius": 12,
        "flexDirection": "column",
        "opacity": 1,
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      {},
    ]
  }
  testID="expando-row"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingBottom": 8,
        "paddingTop": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexGrow": 1,
          "gap": 12,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          {
            "borderBottomColor": "rgba(255,255,255,0.12)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(255,255,255,0.12)",
            "borderLeftWidth": 0,
            "borderRightColor": "rgba(255,255,255,0.12)",
            "borderRightWidth": 0,
            "borderStyle": "solid",
            "borderTopColor": "rgba(255,255,255,0.12)",
            "borderTopWidth": 0,
            "flex": 1,
            "flexShrink": 0,
            "height": 0,
            "maxHeight": 0,
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 4,
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.4}
          style={
            {
              "color": "rgba(255, 255, 255, 0.38)",
              "fontFamily": "Basel Grotesk",
              "fontSize": 15,
              "fontWeight": "400",
              "lineHeight": 19.5,
              "textAlign": "center",
            }
          }
          suppressHighlighting={true}
          testID="expando-row-label"
        >
          Test Label
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
          testID="expando-row-icon"
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            fill="none"
            focusable={false}
            meetOrSlice={0}
            minX={0}
            minY={0}
            strokeWidth={8}
            style={
              [
                {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                {
                  "color": "rgba(255, 255, 255, 0.38)",
                  "height": 16,
                  "width": 16,
                },
                {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={16}
            vbWidth={17}
          >
            <RNSVGGroup
              color="rgba(255, 255, 255, 0.38)"
              fill={null}
              propList={
                [
                  "fill",
                  "strokeWidth",
                ]
              }
              strokeWidth={8}
            >
              <RNSVGPath
                d="M11.5201 11.6467C11.7154 11.842 11.7154 12.1587 11.5201 12.354C11.4227 12.4514 11.2947 12.5007 11.1667 12.5007C11.0387 12.5007 10.9107 12.452 10.8134 12.354L8.50004 10.0407L6.18672 12.354C5.99139 12.5494 5.6747 12.5494 5.47937 12.354C5.28403 12.1587 5.28403 11.842 5.47937 11.6467L8.14603 8.98C8.34137 8.78466 8.65806 8.78466 8.85339 8.98L11.5201 11.6467ZM8.14668 7.02003C8.24402 7.11737 8.37204 7.16668 8.50004 7.16668C8.62804 7.16668 8.75606 7.11803 8.85339 7.02003L11.5201 4.35337C11.7154 4.15804 11.7154 3.84135 11.5201 3.64601C11.3247 3.45068 11.008 3.45068 10.8127 3.64601L8.49939 5.95933L6.18607 3.64601C5.99074 3.45068 5.67405 3.45068 5.47871 3.64601C5.28338 3.84135 5.28338 4.15804 5.47871 4.35337L8.14668 7.02003Z"
                fill={
                  {
                    "type": 2,
                  }
                }
                propList={
                  [
                    "fill",
                    "stroke",
                    "strokeWidth",
                  ]
                }
                stroke={
                  {
                    "type": 2,
                  }
                }
                strokeWidth="0.4"
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "rgba(255,255,255,0.12)",
            "borderBottomWidth": 1,
            "borderLeftColor": "rgba(255,255,255,0.12)",
            "borderLeftWidth": 0,
            "borderRightColor": "rgba(255,255,255,0.12)",
            "borderRightWidth": 0,
            "borderStyle": "solid",
            "borderTopColor": "rgba(255,255,255,0.12)",
            "borderTopWidth": 0,
            "flex": 1,
            "flexShrink": 0,
            "height": 0,
            "maxHeight": 0,
          }
        }
      />
    </View>
  </View>
</View>
`;
